; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/ext3/extr_inode.c_ext3_releasepage.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/ext3/extr_inode.c_ext3_releasepage.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.page = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.page*, i32)* @ext3_releasepage to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ext3_releasepage(%struct.page* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.page*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  store %struct.page* %0, %struct.page** %4, align 8
  store i32 %1, i32* %5, align 4
  %7 = load %struct.page*, %struct.page** %4, align 8
  %8 = getelementptr inbounds %struct.page, %struct.page* %7, i32 0, i32 0
  %9 = load %struct.TYPE_2__*, %struct.TYPE_2__** %8, align 8
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i32* @EXT3_JOURNAL(i32 %11)
  store i32* %12, i32** %6, align 8
  %13 = load %struct.page*, %struct.page** %4, align 8
  %14 = call i32 @trace_ext3_releasepage(%struct.page* %13)
  %15 = load %struct.page*, %struct.page** %4, align 8
  %16 = call i32 @PageChecked(%struct.page* %15)
  %17 = call i32 @WARN_ON(i32 %16)
  %18 = load %struct.page*, %struct.page** %4, align 8
  %19 = call i32 @page_has_buffers(%struct.page* %18)
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %22, label %21

21:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %27

22:                                               ; preds = %2
  %23 = load i32*, i32** %6, align 8
  %24 = load %struct.page*, %struct.page** %4, align 8
  %25 = load i32, i32* %5, align 4
  %26 = call i32 @journal_try_to_free_buffers(i32* %23, %struct.page* %24, i32 %25)
  store i32 %26, i32* %3, align 4
  br label %27

27:                                               ; preds = %22, %21
  %28 = load i32, i32* %3, align 4
  ret i32 %28
}

declare dso_local i32* @EXT3_JOURNAL(i32) #1

declare dso_local i32 @trace_ext3_releasepage(%struct.page*) #1

declare dso_local i32 @WARN_ON(i32) #1

declare dso_local i32 @PageChecked(%struct.page*) #1

declare dso_local i32 @page_has_buffers(%struct.page*) #1

declare dso_local i32 @journal_try_to_free_buffers(i32*, %struct.page*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
